cluster/manifests/dedicated-container-ingress-controller/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dedicated-container-ingress-controller
  labels:
    name: dedicated-container-ingress-controller
    pod-security.kubernetes.io/enforce: restricted
