cluster/manifests/dedicated-container-ingress-controller/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: dedicated-container-ingress-controller
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: dedicated-container-ingress-controller
      app.kubernetes.io/component: ""
  mtls:
    mode: STRICT
