cluster/manifests/dedicated-container-ingress-controller/overlays/dev/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: dedicated-container-ingress-controller
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - dedicated-container-ingress-controller.minikube.127.0.0.1.nip.io
        - dedicated-container-ingress-controller.kaidotio.dev
      port:
        number: 80
        name: http
        protocol: HTTP
