cluster/manifests/dedicated-container-ingress-controller/overlays/dev/virtual_service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: dedicated-container-ingress-controller
spec:
  gateways:
    - dedicated-container-ingress-controller
  hosts:
    - dedicated-container-ingress-controller.minikube.127.0.0.1.nip.io
    - dedicated-container-ingress-controller.kaidotio.dev
  http:
    - route:
        - destination:
            host: dedicated-container-ingress-controller
            port:
              number: 8000
      retries:
        attempts: 3
        retryOn: gateway-error,retriable-4xx,connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes
